--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,8 +6,7 @@ name: test
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-  schedule:
-    - cron: "*/5 * * * *"
+   
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -23,7 +22,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: sleep 5
+        run: sleep 5!
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
