--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on:
   # push:
   # schedule:
   #  - cron: "*/5 * * * *"
-  workflow_dispatch:  # manual trigger
+  workflow_dispatch:  # manual
 
 
 
